--- a/places.html
+++ b/places.html
@@ -1939,7 +1939,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 6"
                                                                 elementtiming="LCP-target"
@@ -2651,7 +2651,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -3363,7 +3363,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -4075,7 +4075,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -4787,7 +4787,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -5491,7 +5491,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -6205,7 +6205,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -6917,7 +6917,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -7549,7 +7549,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -8181,7 +8181,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -8894,7 +8894,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -9607,7 +9607,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -10319,7 +10319,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -11031,7 +11031,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -11743,7 +11743,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -12449,7 +12449,7 @@
                                                                 media="(min-width: 1439.1px)"
                                                               />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
