--- a/products.html
+++ b/products.html
@@ -8705,7 +8705,7 @@
                                                                         "
                                                                         media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                                       <img
-                                                                        class="_6tbg2q"
+                                                                        class="img-full"
                                                                         style="
                                                                           object-fit: cover;
                                                                           vertical-align: bottom;
@@ -8774,7 +8774,7 @@
                                                                           "
                                                                           media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                                         <img
-                                                                          class="_6tbg2q"
+                                                                          class="img-full"
                                                                           style="
                                                                             object-fit: cover;
                                                                             vertical-align: bottom;
@@ -8838,7 +8838,7 @@
                                                                           "
                                                                           media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                                         <img
-                                                                          class="_6tbg2q"
+                                                                          class="img-full"
                                                                           style="
                                                                             object-fit: cover;
                                                                             vertical-align: bottom;
@@ -8906,7 +8906,7 @@
                                                                           "
                                                                           media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                                         <img
-                                                                          class="_6tbg2q"
+                                                                          class="img-full"
                                                                           style="
                                                                             object-fit: cover;
                                                                             vertical-align: bottom;
@@ -8970,7 +8970,7 @@
                                                                           "
                                                                           media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                                         <img
-                                                                          class="_6tbg2q"
+                                                                          class="img-full"
                                                                           style="
                                                                             object-fit: cover;
                                                                             vertical-align: bottom;
