--- a/specific_trip.html
+++ b/specific_trip.html
@@ -322,7 +322,7 @@
                                                                         "
                                                                         media="(min-width: 1439.1px)" />
                                                                       <img
-                                                                        class="_6tbg2q"
+                                                                        class="img-full"
                                                                         aria-hidden="true"
                                                                         alt="image 1 of 4"
                                                                         crossorigin="anonymous"
@@ -474,7 +474,7 @@
                                                                         "
                                                                         media="(min-width: 1439.1px)" />
                                                                       <img
-                                                                        class="_6tbg2q"
+                                                                        class="img-full"
                                                                         aria-hidden="true"
                                                                         alt="image 2 of 4"
                                                                         crossorigin="anonymous"
@@ -554,7 +554,7 @@
                                                                         "
                                                                         media="(min-width: 1439.1px)" />
                                                                       <img
-                                                                        class="_6tbg2q"
+                                                                        class="img-full"
                                                                         aria-hidden="true"
                                                                         alt="image 3 of 4"
                                                                         crossorigin="anonymous"
@@ -634,7 +634,7 @@
                                                                         "
                                                                         media="(min-width: 1439.1px)" />
                                                                       <img
-                                                                        class="_6tbg2q"
+                                                                        class="img-full"
                                                                         aria-hidden="true"
                                                                         alt="image 4 of 4"
                                                                         crossorigin="anonymous"
