--- a/trips.html
+++ b/trips.html
@@ -348,7 +348,7 @@
                                             "
                                             media="(min-width: 1439.1px)" />
                                           <img
-                                            class="_6tbg2q"
+                                            class="img-full"
                                             aria-hidden="true"
                                             alt=""
                                             elementtiming="LCP-target"
@@ -470,7 +470,7 @@
                                                       "
                                                       media="(min-width: 1439.1px)" />
                                                     <img
-                                                      class="_6tbg2q"
+                                                      class="img-full"
                                                       aria-hidden="true"
                                                       alt=""
                                                       elementtiming="LCP-target"
@@ -593,7 +593,7 @@
                                                       "
                                                       media="(min-width: 1439.1px)" />
                                                     <img
-                                                      class="_6tbg2q"
+                                                      class="img-full"
                                                       aria-hidden="true"
                                                       alt=""
                                                       elementtiming="LCP-target"
