--- a/become-a-host/title.html
+++ b/become-a-host/title.html
@@ -123,7 +123,7 @@
                             media="(min-width: 1439.1px)"
                           />
                           <img
-                            class="_6tbg2q"
+                            class="img-full"
                             style="object-fit: cover; vertical-align: bottom"
                             aria-hidden="true"
                             alt=""
