--- a/contact-host.html
+++ b/contact-host.html
@@ -2306,7 +2306,7 @@
                                                                 "
                                                                 media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 style="
                                                                   object-fit: cover;
                                                                   vertical-align: bottom;
