--- a/wishlist.html
+++ b/wishlist.html
@@ -437,7 +437,7 @@
                                                                 "
                                                                 media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -1181,7 +1181,7 @@
                                                                 "
                                                                 media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -1829,7 +1829,7 @@
                                                                 "
                                                                 media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -2588,7 +2588,7 @@
                                                                 "
                                                                 media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
@@ -3264,7 +3264,7 @@
                                                                 "
                                                                 media="(min-width: 1127.1px) and (max-width: 1439px)" />
                                                               <img
-                                                                class="_6tbg2q"
+                                                                class="img-full"
                                                                 aria-hidden="true"
                                                                 alt="Image 1"
                                                                 elementtiming="LCP-target"
