--- a/contact-host.html
+++ b/contact-host.html
@@ -2185,16 +2185,16 @@
                                                                 class="_ati8ih"
                                                               >
                                                                 <span
-                                                                  class="_14y1gc"
+                                                                  class="pricing"
                                                                   ><div
-                                                                    class="_1jo4hgw"
+                                                                    class="pricing__info"
                                                                     aria-hidden="true"
                                                                   >
                                                                     <span
-                                                                      class="_tyxjp1"
+                                                                      class="pricing__unit-price"
                                                                       >₱49,950</span
                                                                     ><span
-                                                                      class="_r1nvod"
+                                                                      class="pricing__quantity"
                                                                       >&nbsp;<!-- -->night</span
                                                                     >
                                                                   </div>
