--- a/places.html
+++ b/places.html
@@ -2559,7 +2559,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -3271,7 +3271,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -3983,7 +3983,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -4695,7 +4695,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -5399,7 +5399,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -6113,7 +6113,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -6825,7 +6825,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -7457,7 +7457,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -8089,7 +8089,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -8802,7 +8802,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -9515,7 +9515,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -10227,7 +10227,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -10939,7 +10939,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -11651,7 +11651,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -12357,7 +12357,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
@@ -13069,7 +13069,7 @@
                                             "
                                           >
                                             <div class="_ati8ih">
-                                              <span class="_14y1gc"></span>
+                                              <span class="pricing"></span>
                                             </div>
                                           </div>
                                         </div>
