--- a/products.html
+++ b/products.html
@@ -6941,16 +6941,16 @@
                                                         >
                                                           <div class="_ati8ih">
                                                             <span
-                                                              class="_14y1gc"
+                                                              class="pricing"
                                                               ><div
-                                                                class="_1jo4hgw"
+                                                                class="pricing__info"
                                                                 aria-hidden="true"
                                                               >
                                                                 <span
-                                                                  class="_tyxjp1"
+                                                                  class="pricing__unit-price"
                                                                   >₱49,950</span
                                                                 ><span
-                                                                  class="_r1nvod"
+                                                                  class="pricing__quantity"
                                                                   >&nbsp;night</span
                                                                 >
                                                               </div>
@@ -9129,16 +9129,16 @@
                                                         >
                                                           <div class="_ati8ih">
                                                             <span
-                                                              class="_14y1gc"
+                                                              class="pricing"
                                                               ><div
-                                                                class="_1jo4hgw"
+                                                                class="pricing__info"
                                                                 aria-hidden="true"
                                                               >
                                                                 <span
-                                                                  class="_tyxjp1"
+                                                                  class="pricing__unit-price"
                                                                   >₱49,950</span
                                                                 ><span
-                                                                  class="_r1nvod"
+                                                                  class="pricing__quantity"
                                                                   >&nbsp;night</span
                                                                 >
                                                               </div>
@@ -16393,16 +16393,16 @@
                                                                   class="_ati8ih"
                                                                 >
                                                                   <span
-                                                                    class="_14y1gc"
+                                                                    class="pricing"
                                                                     ><div
-                                                                      class="_1jo4hgw"
+                                                                      class="pricing__info"
                                                                       aria-hidden="true"
                                                                     >
                                                                       <span
-                                                                        class="_tyxjp1"
+                                                                        class="pricing__unit-price"
                                                                         >₱49,950</span
                                                                       ><span
-                                                                        class="_r1nvod"
+                                                                        class="pricing__quantity"
                                                                         >&nbsp;night</span
                                                                       >
                                                                     </div>
@@ -16889,16 +16889,16 @@
                                                                   class="_ati8ih"
                                                                 >
                                                                   <span
-                                                                    class="_14y1gc"
+                                                                    class="pricing"
                                                                     ><div
-                                                                      class="_1jo4hgw"
+                                                                      class="pricing__info"
                                                                       aria-hidden="true"
                                                                     >
                                                                       <span
-                                                                        class="_tyxjp1"
+                                                                        class="pricing__unit-price"
                                                                         >₱49,950</span
                                                                       ><span
-                                                                        class="_r1nvod"
+                                                                        class="pricing__quantity"
                                                                         >&nbsp;night</span
                                                                       >
                                                                     </div>
@@ -17578,16 +17578,16 @@
                                                                   class="_ati8ih"
                                                                 >
                                                                   <span
-                                                                    class="_14y1gc"
+                                                                    class="pricing"
                                                                     ><div
-                                                                      class="_1jo4hgw"
+                                                                      class="pricing__info"
                                                                       aria-hidden="true"
                                                                     >
                                                                       <span
-                                                                        class="_tyxjp1"
+                                                                        class="pricing__unit-price"
                                                                         >₱49,950</span
                                                                       ><span
-                                                                        class="_r1nvod"
+                                                                        class="pricing__quantity"
                                                                         >&nbsp;night</span
                                                                       >
                                                                     </div>
